Thu Mar  1 02:05:17 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mkconfig.rb (patchlevel): read from version.h.

Wed Feb 28 21:15:00 2007  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (ac_cv_func_fcntl): fcntl support for MinGW.

	* missing/flock.c: workaround for MinGW.

Wed Feb 28 20:51:32 2007  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* pack.c (pack_unpack): properly ignore non-base64 octets such as
	  UTF-8 encoded BOMs; submitted by SOUMA Yutaka <holon@radastery.jp>
	  to fix [ruby-core:10437]

Wed Feb 28 18:31:51 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/openssl/extconf.rb: no need to check unistd.h and sys/time.h.
	  they are already checked at configure.
	  reported by KOBAYASHI Yasuhiro [ruby-list:43225]

Wed Feb 28 18:23:43 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb ($DEFLIBPATH): default library paths ($(topdir), etc)
	  should be the first elements of library paths list.
	  reported by KOBAYASHI Yasuhiro [ruby-list:43225]

Wed Feb 28 10:33:58 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, configure.in, */Makefile.sub (THREAD_MODEL): system
	  specific thread model.

	* compile.h, regint.h, vm.h, array.c: removed unnecessary #include.

Wed Feb 28 04:03:03 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enum.c (take_i): small cosmetic / documentation patch from
	  Tadashi Saito <shiba AT mail2.accsnet.ne.jp>. [ruby-dev:30446]

Wed Feb 28 01:20:18 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/{dbm,gdbm}/test_{dbm,gdbm}.rb: shouldn't use host_os. use
	  target_os instead. reported by KOBAYASHI Yasuhiro [ruby-list:43225]

Wed Feb 28 00:08:11 2007  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* mkconfig.rb (RbConfig): add CONFIG['PATCHLEVEL']

	* common.mk: new target dist

	* distruby.rb: new file

Tue Feb 27 22:18:45 2007  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (--enable-auto-image-base): avoid the neccessity to
	  rebase the shared libs as much as possible;